# mofbattery

./: .gitignore  README.md  pyproject.toml
mofbattery/cheminformatic/: analyser.py
mofbattery/cli/: cli.py
mofbattery/es/: band_pdos.py  band_structure.py  band_structure2.py  plot_dos.py
mofbattery/graph/: similarity.py
mofbattery/prop/: neb_complexes.py
mofbattery/read_write/: coordinates.py  filetyper.py
web/: index.html
web/components/: footer.html  navbar.html
web/data/cifs/: ABALOF.cif  ACICOH.cif  ADASUW.cif  ADAYAG.cif  ADIQUB.cif  AFEHUQ.cif  AFITEP.cif  AGAWOU.cif  AGMANI02.cif  AGOSOE.cif  AHIVAR.cif  AHUBIO.cif  ALIFOS.cif  ALISOF.cif  AMUWUB.cif  ASAMAK.cif  ASUJAB.cif  ATARIY.cif  ATAXUQ.cif  ATORAE01.cif  AVOCOF.cif  AVUJOQ.cif  BADGAP.cif  BAQSOB.cif  BARKUD.cif  BASRIX.cif  BAYQAU.cif  BAYQAU08.cif  BECRUW.cif  BEDWIS.cif  BEFKEF.cif  BEMPUG.cif  BOMHOC.cif  BOVNIM.cif  CADCIT.cif  CAFTAF.cif  CAVWII.cif  CESMOF.cif  CETGIR.cif  CITZIP.cif  (+326 more)
web/data/json/: cluster2.json  footer.json  nav.json  refcode_finder.json  test.json
web/data/json/cheminformatic/: ABALOF.json  ACICOH.json  ADASUW.json  ADAYAG.json  ADIZIZ01.json  AFEHUQ.json  AFITEP.json  AGAWOU.json  AGMANI02.json  AGOSOE.json  AHIVAR.json  AHUBIO.json  ALIFOS.json  ALISOF.json  AMUWUB.json  ASAMAK.json  ASUJAB.json  (+349 more)
web/html/: Li.html  LiO2.html
web/scripts/: apisearch.js  cheminformatic-plot.js  cheminformatic-plot_old.js  compare-cluster.js  display_result.js  explanation.js  navfoot.js  plot_dos.js  structureview.js  structureview_old.js
web/styles/: style.css
(+410 files in other folders)
