[tool.poetry]
name = "mofbattery"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
rdkit = "^2024.9.6"
mofstructure = "^0.1.8.3"
torch-geometric = "^2.6.1"
torch = "2.2.0"
read-rkf = "^0.1.1"
seekpath = "^2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
analyse_structure = "mofbattery.cli.cli:main"
plot_dos= "mofbattery.es.plot_dos:main"
plot_bandstructure = "mofbattery.es.band_structure:main"
ams_input_bandstructure ="mofbattery.cli.cli:ams_bandstructure"
